WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140495
REGRESSION(
r177876
): Membuster regressed ~4%
https://bugs.webkit.org/show_bug.cgi?id=140495
Summary
REGRESSION(r177876): Membuster regressed ~4%
Antti Koivisto
Reported
2015-01-15 06:41:34 PST
Membuster regressed by the cache clearing patch.
Attachments
patch
(2.01 KB, patch)
2015-01-15 06:46 PST
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
patch
(4.87 KB, patch)
2015-01-20 11:11 PST
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-01-15 06:46:59 PST
Created
attachment 244692
[details]
patch
Andreas Kling
Comment 2
2015-01-15 10:34:20 PST
Comment on
attachment 244692
[details]
patch r=me
Antti Koivisto
Comment 3
2015-01-15 12:08:44 PST
https://trac.webkit.org/r178522
Antti Koivisto
Comment 4
2015-01-20 10:46:46 PST
That didn't fix it.
Antti Koivisto
Comment 5
2015-01-20 11:11:35 PST
Created
attachment 245002
[details]
patch
Andreas Kling
Comment 6
2015-01-20 11:47:48 PST
Comment on
attachment 245002
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=245002&action=review
r=me
> Source/WebCore/platform/graphics/FontCascade.cpp:296 > Vector<unsigned, 50> toRemove; > - FontGlyphsCache::iterator end = fontGlyphsCache().end(); > - for (FontGlyphsCache::iterator it = fontGlyphsCache().begin(); it != end; ++it) { > - if (it->value->glyphs.get().hasOneRef()) > - toRemove.append(it->key); > + for (auto& entry : fontGlyphsCache()) { > + if (entry.value->glyphs.get().hasOneRef()) > + toRemove.append(entry.key); > } > for (unsigned i = 0; i < toRemove.size(); ++i) > fontGlyphsCache().remove(toRemove[i]);
Jesus man, just use removeIf(), it's not 2014 anymore.
Antti Koivisto
Comment 7
2015-01-21 11:33:35 PST
https://trac.webkit.org/r178853
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug