REGRESSION(r178133): Membuster regressed ~4% https://bugs.webkit.org/show_bug.cgi?id=140495

Reviewed by Andreas Kling.

* platform/graphics/FontCache.cpp:
(WebCore::FontCache::purgeInactiveFontData):

    Fonts may ref other fonts. Keep clearing until there are no changes.



Canonical link: https://commits.webkit.org/158480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178522 268f45cc-cd09-0410-ab3c-d52691b4dbfc